fixing image issue

--- a/Home.html
+++ b/Home.html
@@ -246,6 +246,7 @@
             </div>
           </div>
           <img src="./assets/main-section-img.png" class="img-fluid main-img" />
+          <img src="./assets/main-sm.png" class="img-fluid main-img-sm" />
         </div>
       </section>
       <!-- End Main Section -->
